Feat: new rules + update of the README.md file.

--- a/DroneGames.csproj
+++ b/DroneGames.csproj
@@ -62,7 +62,7 @@
     <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
   </PropertyGroup>
   <PropertyGroup>
-    <SignManifests>true</SignManifests>
+    <SignManifests>false</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
     <ManifestCertificateThumbprint>EECA1EFF12064546D643D08A1A68B8DB092A22DF</ManifestCertificateThumbprint>
